force-app/main/default/objects/Alert__c/fields/Action_Component_Params__c.field-meta.xml
<CustomField>
    <fullName>Action_Component_Params__c</fullName>
    <label>Action Component Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>