force-app/main/default/objects/Alert__c/fields/Action_Link__c.field-meta.xml
<CustomField>
    <fullName>Action_Link__c</fullName>
    <label>Action Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>