force-app/main/default/objects/Alert__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Sort alerts in ascending mode from 1 to ... x</description>
    <inlineHelpText>Sort alerts in ascending mode from 1 to ... x</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>