force-app/main/default/objects/Alert__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Filter_Logic__c</columns>
    <columns>Action_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>